--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,9 @@ FROM node:22.1.0-alpine
 
 WORKDIR /app
 
+ARG NEXT_PUBLIC_WS_URL
+ENV NEXT_PUBLIC_WS_URL=$NEXT_PUBLIC_WS_URL
+
 COPY package.json package-lock.json* ./
 
 RUN npm install
